@@ -9,8 +9,12 @@
 
 #include <stdarg.h>
 #include <stdio.h>
-#include <syslog.h>
 #include <errno.h>
+#ifdef HAVE_SYSLOG_H
+#include <syslog.h>
+#else
+#error "Syslog header file not available."
+#endif
 
 #define ERRSTR    "error"
 #define ERRMATCH  ERRSTR": "
