@@ -27,6 +27,7 @@ Version 3.2.0 - SVN
  - Allow specification of contest times relative to starttime.
  - Add toggle button for autorefresh of jury pages (port from ETH tree).
  - Add support for team authentication via LDAP server (port from ETH tree).
+ - Pass SYSLOG variable from PHP config to C/C++ programs via environment.
 
 Version 3.1.0 - 14 July 2010
 ----------------------------
